# Shaders

./: Cargo.toml
assets/shadercode/: edge_detection_sheder.glsl  fragment_test.glsl  simple_sobel_shader.glsl  vertex_test.glsl
src/: main.rs
src/shader_pipeline/: EBO.rs  Shader.rs  VAO.rs  VBO.rs  compile_shader.rs  link_program.rs  mod.rs  quad.rs  texture.rs
