[package]
name = "bevy_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0"
bevy_mod_picking = "0.17.0"
wgpu = "0.18.0"
nalgebra = "0.32.3"
image = "0.24.7"
gl = "0.14.0"
glium = "0.33.0"
glfw = "0.54.0"
gl_generator = "0.14.0"
